core/install/css/install.less
/**
* install
*
* Included from main.less file
*/
.install {

	// background image logo dedalo
	&:before {
		content: ' ';
		background-image: url('../../themes/default/dedalo_icon_big.png');
		background-repeat: no-repeat;
		background-position: 0px top;
		background-size: 527px 1024px;
		position: fixed;
		width: 100%;
		height: 100%;
		min-height: 1024px;
		z-index: -1;
		opacity: 0.5;
		-moz-transform: scaleX(-1);
		-o-transform: scaleX(-1);
		-webkit-transform: scaleX(-1);
		transform: scaleX(-1);
	}

	>.content_data {
		padding: 4em;
		padding-top: 1rem;
		padding-bottom: 10rem;
		line-height: 1.45rem;
	}

	h1 {
		margin-bottom: 0.75rem;
		display: block;
	}

	// msg
	.msg {
		display: block;
		position: relative;

		// error, ok
		&.error, &.ok, &.warning {
			line-height: 1.1em;
			background-color: transparent !important;
			display: block;
			margin: 0px;
			padding-left: 0px;
			font-size: 1.1rem;
		}

		&.error {
			color: red;
		}

		&.ok {
			color: green;
		}

		&.warning {
			color: orange;
		}
	}

	.button_common_mixin {
		display: block;
		margin-top: 1rem;
		margin-bottom: 1rem;
		text-transform: uppercase;
	}

	// all blocks common
	section {
		margin-top: 2rem;
		margin-bottom: 2rem;
		display: block;
		button {
			.button_common_mixin();
		}
	}

	// help_block
	.help_block {

		.description {
			>.icon {
				height: 1.1em;
				vertical-align: text-top;
				margin-right: 0.25rem;
				margin-left: 0.25rem;
			}
			>.link {

			}
		}
	}

	// config_block
	.config_block {

		.key {
			opacity: 0.65;
			padding-right: 0.25rem;
			&:after {
				content: ' : ';
			}
		}
		.value {
			padding-right: 3rem;
			font-weight: 600;
		}
	}//end .config_block

	// install_db_block
	.install_db_block {

		.db_config_container {
			display: flex;
			flex-wrap: wrap;

			.key {
				opacity: 0.65;
				padding-right: 0.25rem;
				text-transform: uppercase;
				&:after {
					content: ' : ';
				}
			}
			.value {
				padding-right: 3rem;
				font-weight: 600;
			}
		}

	}//end .install_db_block

	// set_root_password_block
	.set_root_password_block {

		.description {
			margin-bottom: 0.5rem;
		}

		// input validation styles
		.password_value {
			width: 22rem;
			margin-left: 0.5rem;
			margin-right: 1rem;
			height: 2.5rem;
			display: inline-block;
		}
		.valid {
			border-bottom: 3px solid green;
		}
		.invalid {
			border-bottom: 3px solid red;
		}

		// checkbox label
		.password_show_label {
			display: block;
			line-height: 0.5rem;
			padding: 1rem;
			width: 6rem;
			cursor: pointer;

			// checkbox
			>.password_show {
				vertical-align: text-top;
				margin-right: 0.333rem;
				height: 1rem;
			}
		}

	}//end .set_root_password_block

	// hierarchies_import_block
	.hierarchies_import_block {

		.typology_label{
			font-size: 1.3rem;
			text-align: center;
			padding: 0;
			border-bottom: 0.1rem @color_grey_6 solid;
		}

		.hierarchy_ul {
			padding: 1em;
			display: grid;
			grid-template-columns: repeat(5, 1fr);
		}

		.hierarchy_label {
			cursor: pointer;
			line-height: 1.5rem;
			width: 94%;
			display: inline-block;
			margin-bottom: 2px;

			&:hover {
				box-shadow: 0px 1px 0px @color_grey_13;
			}

			>.hierarchy_checkbox {
				margin-right: 0.5rem;
				vertical-align: text-bottom;
				line-height: 1rem;
				height: 1.2rem;
			}
		}

	}//end .hierarchies_import_block

	// install_finish_block
	.install_finish_block {
		margin-bottom: 3rem;
	}//end .install_finish_block

}//end .install

